--- a/package.json
+++ b/package.json
@@ -15,25 +15,28 @@
     "@types/lodash": "^4.17.17",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "suncalc": "^1.9.0",
     "uuid": "^11.1.0",
     "web-vitals": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@stagewise/toolbar-next": "latest",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/suncalc": "^1.8.1",
     "@types/uuid": "^10.0.0",
-    "@stagewise/toolbar-next": "latest",
     "eslint": "^8",
     "eslint-config-next": "15.0.0-canary.58",
     "tailwindcss": "^4",
