优化package.json和package-lock.json，删除不必要的依赖，移除性能测试脚本和相关文档，重构CalculatorPageOptimized组件以避免不必要的API调用，更新布局以移除Stagewise工具栏，提升代码可读性和性能。

--- a/package.json
+++ b/package.json
@@ -4,24 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "dev:optimized": "next dev --turbopack",
-    "dev:fast": "next dev --turbopack --experimental-https",
-    "dev:profile": "next dev --turbopack --experimental-debug",
     "build": "next build",
-    "build:analyze": "ANALYZE=true next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage",
-    "performance:test": "./scripts/simple-performance-test.sh",
-    "performance:analyze": "npm run build && npx @next/bundle-analyzer",
-    "performance:lighthouse": "lighthouse http://localhost:3000 --output=html --output-path=./docs/lighthouse-report.html",
-    "seo:validate": "npm run build && node scripts/seo-validator.js",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.8",
     "@tailwindcss/typography": "^0.5.16",
     "@types/lodash": "^4.17.17",
     "date-fns": "^4.1.0",
@@ -37,30 +25,19 @@
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "suncalc": "^1.9.0",
-    "uuid": "^11.1.0",
     "web-vitals": "^5.0.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@stagewise/toolbar-next": "latest",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
     "@types/next-pwa": "^5.6.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/suncalc": "^1.8.1",
-    "@types/uuid": "^10.0.0",
-    "@vitejs/plugin-react": "^4.5.0",
     "eslint": "^8",
     "eslint-config-next": "^15.3.2",
-    "jsdom": "^26.1.0",
-    "puppeteer": "^24.9.0",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "vitest": "^3.1.4"
+    "typescript": "^5"
   }
 }
