更新项目：禁用 ESLint 警告，优化 Next.js 配置，修复 AdSense 加载问题，增强性能监控，改进日期选择器和城市选择功能，添加缓存机制，提升用户体验和代码可读性。

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,8 +11,8 @@
         "varsIgnorePattern": "^_"
       }
     ],
-    "react/no-unescaped-entities": "warn",
-    "@typescript-eslint/no-explicit-any": "warn",
+    "react/no-unescaped-entities": "off",
+    "@typescript-eslint/no-explicit-any": "off",
     "react-hooks/exhaustive-deps": "warn"
   }
 }
