更新 ESLint 配置，添加 JSX 可访问性插件，优化 TypeScript 类型定义，修复多个页面中的文本转义问题，提升代码可读性和用户体验。

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,6 @@
       "dom.iterable",
       "esnext"
     ],
-    "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
@@ -31,11 +30,11 @@
   "include": [
     "**/*.ts",
     "**/*.tsx",
-    ".next-dev/types/**/*.ts",
-    "next-env.d.ts",
-    ".next/types/**/*.ts"
+    "next-env.d.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    ".next",
+    ".next-dev"
   ]
 }
