--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,12 @@
 {
   "extends": [
     "next/core-web-vitals",
-    "next/typescript"
+    "next/typescript",
+    "plugin:jsx-a11y/recommended",
+    "eslint-config-prettier"
+  ],
+  "plugins": [
+    "jsx-a11y"
   ],
   "rules": {
     "@typescript-eslint/no-unused-vars": [
@@ -11,8 +16,10 @@
         "varsIgnorePattern": "^_"
       }
     ],
-    "react/no-unescaped-entities": "off",
-    "@typescript-eslint/no-explicit-any": "off",
-    "react-hooks/exhaustive-deps": "warn"
+    "react/no-unescaped-entities": "warn",
+    "@typescript-eslint/no-explicit-any": "warn",
+    "react-hooks/exhaustive-deps": "warn",
+    "jsx-a11y/no-redundant-roles": "warn",
+    "jsx-a11y/aria-activedescendant-has-tabindex": "warn"
   }
 }
