--- a/package.json
+++ b/package.json
@@ -18,29 +18,32 @@
     "date-fns-tz": "^3.2.0",
     "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.511.0",
-    "next": "15.3.2",
+    "lucide-react": "0.513.0",
+    "next": "15.3.3",
     "next-pwa": "^5.6.0",
     "react": "^19.0.0",
-    "react-datepicker": "^8.3.0",
+    "react-datepicker": "8.4.0",
     "react-dom": "^19.0.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "suncalc": "^1.9.0",
-    "web-vitals": "^5.0.1"
+    "web-vitals": "5.0.2"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "4.1.8",
     "@types/next-pwa": "^5.6.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/suncalc": "^1.8.1",
     "eslint": "^8",
-    "eslint-config-next": "^15.3.2",
+    "eslint-config-next": "15.3.3",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "rimraf": "^6.0.1",
-    "tailwindcss": "^4",
+    "tailwindcss": "4.1.8",
     "typescript": "^5"
   }
 }
