更新项目配置：增强 ESLint 规则，添加 React Hooks 插件，强化安全头配置，优化日志策略，更新依赖项，确保全流程验证通过，提升代码质量和安全性。

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,12 +25,14 @@
       "@/*": [
         "./src/*"
       ]
-    }
+    },
+    "allowJs": true
   },
   "include": [
     "**/*.ts",
     "**/*.tsx",
-    "next-env.d.ts"
+    "next-env.d.ts",
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
