--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,11 +2,13 @@
   "extends": [
     "next/core-web-vitals",
     "next/typescript",
+    "plugin:react-hooks/recommended",
     "plugin:jsx-a11y/recommended",
     "eslint-config-prettier"
   ],
   "plugins": [
-    "jsx-a11y"
+    "jsx-a11y",
+    "react-hooks"
   ],
   "rules": {
     "@typescript-eslint/no-unused-vars": [
