--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,16 @@ next-env.d.ts
 /public/sw.js.map
 /public/workbox-*.js.map
 /public/worker-*.js.map
+
+# Local analysis / debug artifacts
+.lighthouseci/
+/playwright-report/
+/test-results/
+.vitest/
+
+# Precomputed JSON (kept locally, not committed)
+/public/precomputed/*.json
+
+# Logs
+*.log
+*.log.*
