更新项目功能与文档：在 package.json 中添加图像压缩和清理脚本，优化 Vercel 定时任务调度；新增时区转换相关文档，记录时区处理的注意事项；更新博客页面以支持静态图像数据，提升性能和用户体验；修复行星时计算逻辑，确保数据准确性。

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "precompute:newyork": "tsx scripts/precompute-newyork.ts",
     "verify:newyork": "tsx scripts/verify-newyork.ts",
     "clean:precomputed": "tsx scripts/clean-precomputed.ts",
+    "compress:blog-images": "tsx scripts/compress-blog-images.ts",
+    "clean:blog-image-artifacts": "tsx scripts/clean-blog-image-artifacts.ts",
     "test": "vitest run",
     "test:unit": "vitest run",
     "test:e2e": "playwright test",
@@ -62,6 +64,7 @@
     "tsx": "^4.20.2",
     "typescript": "^5",
     "vitest": "^3.2.3",
-    "@playwright/test": "^1.44.0"
+    "@playwright/test": "^1.44.0",
+    "sharp": "^0.33.4"
   }
 }
