--- a/vercel.json
+++ b/vercel.json
@@ -3,15 +3,13 @@
   "crons": [
     {
       "path": "/api/cron/precompute-newyork",
-      "schedule": "0 2 * * *"
-    },
-    {
-      "path": "/api/cron/verify-newyork",
-      "schedule": "0 3 * * *"
+      "schedule": "0 22 * * *",
+      "timezone": "America/New_York"
     },
     {
       "path": "/api/cron/revalidate",
-      "schedule": "1 4 * * *"
+      "schedule": "5 22 * * *",
+      "timezone": "America/New_York"
     }
   ]
 }
