--- a/vercel.json
+++ b/vercel.json
@@ -3,13 +3,11 @@
   "crons": [
     {
       "path": "/api/cron/precompute-newyork",
-      "schedule": "0 22 * * *",
-      "timezone": "America/New_York"
+      "schedule": "0 2 * * *"
     },
     {
-      "path": "/api/cron/revalidate",
-      "schedule": "5 22 * * *",
-      "timezone": "America/New_York"
+      "path": "/api/cron/precompute-newyork",
+      "schedule": "0 3 * * *"
     }
   ]
 }
