--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "@types/lodash": "^4.17.17",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "gray-matter": "^4.0.3",
@@ -39,6 +40,7 @@
     "web-vitals": "5.0.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.44.0",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "4.1.8",
     "@testing-library/dom": "^10.4.0",
@@ -59,12 +61,11 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "jsdom": "^26.1.0",
     "rimraf": "^6.0.1",
+    "sharp": "^0.33.4",
     "tailwindcss": "4.1.8",
     "ts-node": "^10.9.1",
     "tsx": "^4.20.2",
     "typescript": "^5",
-    "vitest": "^3.2.3",
-    "@playwright/test": "^1.44.0",
-    "sharp": "^0.33.4"
+    "vitest": "^3.2.3"
   }
 }
