--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.9",
     "@tailwindcss/typography": "^0.5.16",
     "@types/lodash": "^4.17.17",
     "clsx": "^2.1.1",
@@ -30,8 +31,7 @@
     "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
     "lucide-react": "0.513.0",
-    "next": "15.3.3",
-    "next-pwa": "^5.6.0",
+    "next": "^15.3.5",
     "react": "^19.0.0",
     "react-datepicker": "8.4.0",
     "react-dom": "^19.0.0",
@@ -49,7 +49,6 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jsdom": "^21.1.7",
-    "@types/next-pwa": "^5.6.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
