--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "@ducanh2912/next-pwa": "^10.2.9",
+    "@serwist/next": "^9.0.15",
     "@tailwindcss/typography": "^0.5.16",
     "@types/lodash": "^4.17.17",
     "clsx": "^2.1.1",
