添加线上配置检查脚本，更新项目结构文档，优化缓存管理和性能监控工具，增强数据验证逻辑

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "typecheck": "tsc --noEmit",
     "clean": "rimraf .next .next-dev node_modules/.cache",
     "clean:all": "rimraf .next .next-dev node_modules/.cache && yarn install",
+    "precompute:newyork": "tsx scripts/precompute-newyork.ts",
+    "verify:newyork": "tsx scripts/verify-newyork.ts",
     "force:precompute-today": "tsx scripts/force-precompute-today.ts",
-    "force:precompute-multiple": "tsx scripts/force-precompute-multiple-days.ts",
+    "clean:precomputed": "tsx scripts/clean-precomputed.ts",
     "compress:blog-images": "tsx scripts/compress-blog-images.ts",
     "clean:blog-image-artifacts": "tsx scripts/clean-blog-image-artifacts.ts",
     "test": "vitest run",
