删除线上配置检查脚本，更新项目结构文档，添加每日预计算和缓存管理API，优化缓存策略和健康检查功能

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,17 @@
   "devCommand": "npm run dev",
   "installCommand": "npm install",
 
+  "crons": [
+    {
+      "path": "/api/cron/daily-precompute",
+      "schedule": "0 22 * * *"
+    },
+    {
+      "path": "/api/cron/revalidate",
+      "schedule": "5 22 * * *"
+    }
+  ],
+
   "headers": [
     {
       "source": "/service-worker.js",
