--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@serwist/next": "^9.0.15",
     "@tailwindcss/typography": "^0.5.16",
     "@types/lodash": "^4.17.17",
+    "@vercel/kv": "^3.0.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
