--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "0.513.0",
     "next": "^15.3.5",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-datepicker": "8.4.0",
     "react-dom": "^19.0.0",
@@ -46,7 +47,6 @@
   "devDependencies": {
     "@playwright/test": "^1.44.0",
     "@svgr/webpack": "^8.1.0",
-    "@tailwindcss/postcss": "4.1.8",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -57,6 +57,7 @@
     "@types/react-dom": "^19",
     "@types/suncalc": "^1.8.1",
     "autoprefixer": "^10.4.21",
+    "postcss": "^8.4.35",
     "eslint": "^8",
     "eslint-config-next": "15.3.3",
     "eslint-config-prettier": "^10.1.5",
@@ -65,7 +66,7 @@
     "jsdom": "^26.1.0",
     "rimraf": "^6.0.1",
     "sharp": "^0.33.4",
-    "tailwindcss": "4.1.8",
+    "tailwindcss": "^3.4.0",
     "ts-node": "^10.9.1",
     "tsx": "^4.20.2",
     "typescript": "^5",
